kube/api-svc.yml
apiVersion: v1
kind: Service
metadata:
  namespace: sacredsteps
  name: dorian-final-api-svc
spec:
  type: ClusterIP
  selector:
    app: dorian-final-api
  ports:
    - port: 80
      targetPort: 8080
