kube/api-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: sacredsteps
  name: dorian-final-api-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: sacredsteps.duckdns.org
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: dorian-final-api-svc
                port:
                  number: 80
